--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -43,7 +43,7 @@ stages:
 
     - task: CopyFiles@2
       inputs:
-        SourceFolder: 'samplewebapp/app/'
+        SourceFolder: 'samplewebapp/app/SampleWebApp/'
         Contents: '**/*.yml'
         TargetFolder: '$(Pipeline.Workspace)/app'
     - task: PublishPipelineArtifact@1
