Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -45,7 +45,7 @@ stages:
       inputs:
         SourceFolder: 'samplewebapp/manifests/'
         Contents: '**/*.yml'
-        TargetFolder: '$(Pipeline.Workspace)/app'
+        TargetFolder: '$(Pipeline.Workspace)/manifests/'
         
        
 #    - task: PublishPipelineArtifact@1
