Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -43,7 +43,7 @@ stages:
 
     - task: CopyFiles@2
       inputs:
-        SourceFolder: 'samplewebapp/app/'
+        SourceFolder: 'app/'
         Contents: '**/*.yml'
         TargetFolder: '$(Pipeline.Workspace)/manifests/'
         
