--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,6 +14,16 @@ spec:
     spec:
       containers:
         - name: samplewebapp 
-          image: acr11111.azurecr.io/samplewebapp
+          image: sriniacr44.azurecr.io/samplewebapp
           ports:
           - containerPort: 80
+- name: config
+    configMap:
+      # Provide the name of the ConfigMap you want to mount.
+      name: game-demo
+      # An array of keys from the ConfigMap to create as files
+      items:
+      - key: "game.properties"
+        path: "game.properties"
+      - key: "user-interface.properties"
+        path: "user-interface.properties"
