Update azure-pipelines-5.yml for Azure Pipelines

--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -41,7 +41,7 @@ stages:
         tags: |
           $(tag)
 
-    - upload: manifests
+    - upload: samplewebapp/manifests
       artifact: manifests
 
 - stage: Deploy
