--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: samplewebapp 
-          image: sriniacr44.azurecr.io/samplewebapp
+          image: acr112233.azurecr.io/samplewebapp
           ports:
         - containerPort: 80
